# bootcamp-santander-2025-python

./: README.md  desafio_sistema_bancario_v01.py  desafio_sistema_bancario_v02.py  desafio_sistema_bancario_v03.py
TDD-project/: pyproject.toml
TDD-project/store/: main.py
workout_api/: Makefile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
workout_api/alembic/versions/: 02049ba2aa69_init_db.py
workout_api/src/workout_api/: main.py
workout_api/src/workout_api/atleta/: controller.py  schemas.py
workout_api/src/workout_api/categorias/: controller.py
workout_api/src/workout_api/centro_treinamento/: controller.py
